# apache_scripts

./: README.md
blitz_missing/: .vimspector.json  dev-requirements.txt  old_vimspector_json  pyproject.toml  requirements.txt
blitz_missing/binaries/: 2H23 Blitz - GOM DECOM.xlsx  all_personnel.txt  blitz_report.TXT  my_personnel.txt
blitz_missing/src/get_missing_blitz/: main.py
blitz_missing/tests/: test_blitz.py
hse_daily_report_tracking/: paste_report  pyproject.toml
hse_daily_report_tracking/hse_daily_report_tracking/: main.py
