[tool.poetry]
name = "hse-daily-report-tracking"
version = "0.1.0"
description = ""
authors = ["Shay Hill <shay_public@hotmail.com>"]
readme = "README.md"
packages = [{include = "hse_daily_report_tracking"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
